Implemented application gateway